src/org/hackf/discordeventbot/heql/HEQLParser.java
// Generated from HEQL.g4 by ANTLR 4.7
package org.hackf.discordeventbot.heql;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HEQLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, FORMAT=9, 
		HEQL=10, AND=11, OR=12, OPERATOR=13, DISTINCT=14, FROM=15, WHERE=16, EVENTS=17, 
		NEXT=18, SELECT=19, OBJECT=20, LITERAL=21, WS=22, UNEXPECTED_CHAR=23;
	public static final int
		RULE_message = 0, RULE_heql_block = 1, RULE_selectBase = 2, RULE_selectNext = 3, 
		RULE_selectDistinct = 4, RULE_condition = 5, RULE_logicalOr = 6, RULE_logicalAnd = 7, 
		RULE_leftParen = 8, RULE_rightParen = 9, RULE_selField = 10, RULE_condField = 11, 
		RULE_fieldList = 12, RULE_operator = 13, RULE_literal = 14, RULE_format = 15;
	public static final String[] ruleNames = {
		"message", "heql_block", "selectBase", "selectNext", "selectDistinct", 
		"condition", "logicalOr", "logicalAnd", "leftParen", "rightParen", "selField", 
		"condField", "fieldList", "operator", "literal", "format"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'<?'", "'?>'", "'|'", "';'", "'('", "')'", "','", "'*'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, null, null, null, null, null, null, null, null, "FORMAT", "HEQL", 
		"AND", "OR", "OPERATOR", "DISTINCT", "FROM", "WHERE", "EVENTS", "NEXT", 
		"SELECT", "OBJECT", "LITERAL", "WS", "UNEXPECTED_CHAR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "HEQL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HEQLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class MessageContext extends ParserRuleContext {
		public Heql_blockContext heql_block() {
			return getRuleContext(Heql_blockContext.class,0);
		}
		public MessageContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_message; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).enterMessage(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).exitMessage(this);
		}
	}

	public final MessageContext message() throws RecognitionException {
		MessageContext _localctx = new MessageContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_message);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(32);
					matchWildcard();
					}
					} 
				}
				setState(37);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(38);
			heql_block();
			setState(42);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=1 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1+1 ) {
					{
					{
					setState(39);
					matchWildcard();
					}
					} 
				}
				setState(44);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Heql_blockContext extends ParserRuleContext {
		public TerminalNode HEQL() { return getToken(HEQLParser.HEQL, 0); }
		public SelectNextContext selectNext() {
			return getRuleContext(SelectNextContext.class,0);
		}
		public SelectDistinctContext selectDistinct() {
			return getRuleContext(SelectDistinctContext.class,0);
		}
		public SelectBaseContext selectBase() {
			return getRuleContext(SelectBaseContext.class,0);
		}
		public FormatContext format() {
			return getRuleContext(FormatContext.class,0);
		}
		public Heql_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_heql_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).enterHeql_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).exitHeql_block(this);
		}
	}

	public final Heql_blockContext heql_block() throws RecognitionException {
		Heql_blockContext _localctx = new Heql_blockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_heql_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			match(T__0);
			setState(46);
			match(HEQL);
			setState(50);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				setState(47);
				selectNext();
				}
				break;
			case 2:
				{
				setState(48);
				selectDistinct();
				}
				break;
			case 3:
				{
				setState(49);
				selectBase();
				}
				break;
			}
			setState(52);
			match(T__1);
			setState(55);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(53);
				match(T__2);
				setState(54);
				format();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectBaseContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(HEQLParser.SELECT, 0); }
		public FieldListContext fieldList() {
			return getRuleContext(FieldListContext.class,0);
		}
		public TerminalNode FROM() { return getToken(HEQLParser.FROM, 0); }
		public TerminalNode EVENTS() { return getToken(HEQLParser.EVENTS, 0); }
		public TerminalNode WHERE() { return getToken(HEQLParser.WHERE, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public SelectBaseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectBase; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).enterSelectBase(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).exitSelectBase(this);
		}
	}

	public final SelectBaseContext selectBase() throws RecognitionException {
		SelectBaseContext _localctx = new SelectBaseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_selectBase);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(57);
			match(SELECT);
			setState(58);
			fieldList();
			setState(59);
			match(FROM);
			setState(60);
			match(EVENTS);
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(61);
				match(WHERE);
				setState(62);
				condition(0);
				}
			}

			setState(66);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(65);
				match(T__3);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectNextContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(HEQLParser.SELECT, 0); }
		public TerminalNode NEXT() { return getToken(HEQLParser.NEXT, 0); }
		public FieldListContext fieldList() {
			return getRuleContext(FieldListContext.class,0);
		}
		public TerminalNode FROM() { return getToken(HEQLParser.FROM, 0); }
		public TerminalNode EVENTS() { return getToken(HEQLParser.EVENTS, 0); }
		public TerminalNode WHERE() { return getToken(HEQLParser.WHERE, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public SelectNextContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectNext; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).enterSelectNext(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).exitSelectNext(this);
		}
	}

	public final SelectNextContext selectNext() throws RecognitionException {
		SelectNextContext _localctx = new SelectNextContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_selectNext);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(SELECT);
			setState(69);
			match(NEXT);
			setState(70);
			fieldList();
			setState(71);
			match(FROM);
			setState(72);
			match(EVENTS);
			setState(75);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(73);
				match(WHERE);
				setState(74);
				condition(0);
				}
			}

			setState(78);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(77);
				match(T__3);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelectDistinctContext extends ParserRuleContext {
		public TerminalNode SELECT() { return getToken(HEQLParser.SELECT, 0); }
		public TerminalNode DISTINCT() { return getToken(HEQLParser.DISTINCT, 0); }
		public SelFieldContext selField() {
			return getRuleContext(SelFieldContext.class,0);
		}
		public TerminalNode FROM() { return getToken(HEQLParser.FROM, 0); }
		public TerminalNode EVENTS() { return getToken(HEQLParser.EVENTS, 0); }
		public TerminalNode WHERE() { return getToken(HEQLParser.WHERE, 0); }
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public SelectDistinctContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selectDistinct; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).enterSelectDistinct(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).exitSelectDistinct(this);
		}
	}

	public final SelectDistinctContext selectDistinct() throws RecognitionException {
		SelectDistinctContext _localctx = new SelectDistinctContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_selectDistinct);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(SELECT);
			setState(81);
			match(DISTINCT);
			setState(82);
			selField();
			setState(83);
			match(FROM);
			setState(84);
			match(EVENTS);
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WHERE) {
				{
				setState(85);
				match(WHERE);
				setState(86);
				condition(0);
				}
			}

			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__3) {
				{
				setState(89);
				match(T__3);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConditionContext extends ParserRuleContext {
		public ConditionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condition; }
	 
		public ConditionContext() { }
		public void copyFrom(ConditionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class CondLogicalOrContext extends ConditionContext {
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public LogicalOrContext logicalOr() {
			return getRuleContext(LogicalOrContext.class,0);
		}
		public CondLogicalOrContext(ConditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).enterCondLogicalOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).exitCondLogicalOr(this);
		}
	}
	public static class CondComparisonContext extends ConditionContext {
		public OperatorContext operator() {
			return getRuleContext(OperatorContext.class,0);
		}
		public List<CondFieldContext> condField() {
			return getRuleContexts(CondFieldContext.class);
		}
		public CondFieldContext condField(int i) {
			return getRuleContext(CondFieldContext.class,i);
		}
		public List<LiteralContext> literal() {
			return getRuleContexts(LiteralContext.class);
		}
		public LiteralContext literal(int i) {
			return getRuleContext(LiteralContext.class,i);
		}
		public CondComparisonContext(ConditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).enterCondComparison(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).exitCondComparison(this);
		}
	}
	public static class CondParenContext extends ConditionContext {
		public LeftParenContext leftParen() {
			return getRuleContext(LeftParenContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public RightParenContext rightParen() {
			return getRuleContext(RightParenContext.class,0);
		}
		public CondParenContext(ConditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).enterCondParen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).exitCondParen(this);
		}
	}
	public static class CondLogicalAndContext extends ConditionContext {
		public List<ConditionContext> condition() {
			return getRuleContexts(ConditionContext.class);
		}
		public ConditionContext condition(int i) {
			return getRuleContext(ConditionContext.class,i);
		}
		public LogicalAndContext logicalAnd() {
			return getRuleContext(LogicalAndContext.class,0);
		}
		public CondLogicalAndContext(ConditionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).enterCondLogicalAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).exitCondLogicalAnd(this);
		}
	}

	public final ConditionContext condition() throws RecognitionException {
		return condition(0);
	}

	private ConditionContext condition(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ConditionContext _localctx = new ConditionContext(_ctx, _parentState);
		ConditionContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_condition, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OBJECT:
			case LITERAL:
				{
				_localctx = new CondComparisonContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(95);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case OBJECT:
					{
					setState(93);
					condField();
					}
					break;
				case LITERAL:
					{
					setState(94);
					literal();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(97);
				operator();
				setState(100);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case OBJECT:
					{
					setState(98);
					condField();
					}
					break;
				case LITERAL:
					{
					setState(99);
					literal();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case T__4:
				{
				_localctx = new CondParenContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(102);
				leftParen();
				setState(103);
				condition(0);
				setState(104);
				rightParen();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(118);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(116);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
					case 1:
						{
						_localctx = new CondLogicalAndContext(new ConditionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_condition);
						setState(108);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(109);
						logicalAnd();
						setState(110);
						condition(4);
						}
						break;
					case 2:
						{
						_localctx = new CondLogicalOrContext(new ConditionContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_condition);
						setState(112);
						if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
						setState(113);
						logicalOr();
						setState(114);
						condition(2);
						}
						break;
					}
					} 
				}
				setState(120);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class LogicalOrContext extends ParserRuleContext {
		public TerminalNode OR() { return getToken(HEQLParser.OR, 0); }
		public LogicalOrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalOr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).enterLogicalOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).exitLogicalOr(this);
		}
	}

	public final LogicalOrContext logicalOr() throws RecognitionException {
		LogicalOrContext _localctx = new LogicalOrContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_logicalOr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			match(OR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LogicalAndContext extends ParserRuleContext {
		public TerminalNode AND() { return getToken(HEQLParser.AND, 0); }
		public LogicalAndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicalAnd; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).enterLogicalAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).exitLogicalAnd(this);
		}
	}

	public final LogicalAndContext logicalAnd() throws RecognitionException {
		LogicalAndContext _localctx = new LogicalAndContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_logicalAnd);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(123);
			match(AND);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LeftParenContext extends ParserRuleContext {
		public LeftParenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_leftParen; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).enterLeftParen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).exitLeftParen(this);
		}
	}

	public final LeftParenContext leftParen() throws RecognitionException {
		LeftParenContext _localctx = new LeftParenContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_leftParen);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125);
			match(T__4);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RightParenContext extends ParserRuleContext {
		public RightParenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_rightParen; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).enterRightParen(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).exitRightParen(this);
		}
	}

	public final RightParenContext rightParen() throws RecognitionException {
		RightParenContext _localctx = new RightParenContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_rightParen);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(127);
			match(T__5);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SelFieldContext extends ParserRuleContext {
		public TerminalNode OBJECT() { return getToken(HEQLParser.OBJECT, 0); }
		public SelFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_selField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).enterSelField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).exitSelField(this);
		}
	}

	public final SelFieldContext selField() throws RecognitionException {
		SelFieldContext _localctx = new SelFieldContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_selField);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(OBJECT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CondFieldContext extends ParserRuleContext {
		public TerminalNode OBJECT() { return getToken(HEQLParser.OBJECT, 0); }
		public CondFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).enterCondField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).exitCondField(this);
		}
	}

	public final CondFieldContext condField() throws RecognitionException {
		CondFieldContext _localctx = new CondFieldContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_condField);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(131);
			match(OBJECT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class FieldListContext extends ParserRuleContext {
		public List<SelFieldContext> selField() {
			return getRuleContexts(SelFieldContext.class);
		}
		public SelFieldContext selField(int i) {
			return getRuleContext(SelFieldContext.class,i);
		}
		public FieldListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fieldList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).enterFieldList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).exitFieldList(this);
		}
	}

	public final FieldListContext fieldList() throws RecognitionException {
		FieldListContext _localctx = new FieldListContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_fieldList);
		int _la;
		try {
			setState(142);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case OBJECT:
				enterOuterAlt(_localctx, 1);
				{
				{
				setState(133);
				selField();
				setState(138);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__6) {
					{
					{
					setState(134);
					match(T__6);
					setState(135);
					selField();
					}
					}
					setState(140);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				match(T__7);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperatorContext extends ParserRuleContext {
		public TerminalNode OPERATOR() { return getToken(HEQLParser.OPERATOR, 0); }
		public OperatorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operator; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).enterOperator(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).exitOperator(this);
		}
	}

	public final OperatorContext operator() throws RecognitionException {
		OperatorContext _localctx = new OperatorContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_operator);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(144);
			match(OPERATOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public TerminalNode LITERAL() { return getToken(HEQLParser.LITERAL, 0); }
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).enterLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HEQLListener ) ((HEQLListener)listener).exitLiteral(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_literal);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146);
			match(LITERAL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
